# city_researcher

./: amenities_evaluation.json  budget_analysis.json  lifestyle_matching.json  main.py  pyproject.toml  readme.md  reviews_collection.json  test_writing_reading.py
Models/: outputFilePaths.py
agents/: neighborhoodAgents.py
tasks/: neighborhoodTasks.py
tools/: browser_tools.py  file_tools.py
